[MODORDERS-551] - HoldingsID not handled properly when duplicating order (#488)
* [MODORDERS-551] - HoldingsID not handled properly when duplicating order

* [MODORDERS-551] - Update tests

* [MODORDERS-551] - mostly holdingId support ready

* [MODORDERS-551] - test added

* [MODORDERS-551] - refactor and add unit tests

* [MODORDERS-551] - unit tests added

* [MODORDERS-551] - back changes in CheckinHelper

* [MODORDERS-535] - Take into consideration "holdingId" or "locationId" when check-in/unreceive/receive pieces (#490)

* [MODORDERS-535] - Take into consideration "holdingId" or "locationId" when check-in/unreceive/receive pieces

* [MODORDERS-535] - Fix error with checkin cache

* [MODORDERS-551] - Update permissions